Edit Structure API-Docs
